--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Заголовок</title>
+    <title>Dostaffkin — Доставка посылок между странами и внутри стран. Безопасно. Быстро. В целости и сохранности!</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script
+        src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=c6731c03-049b-4356-99e1-e6921d4cae99&suggest_apikey=b91e6f73-4b24-4a45-b372-8b5e19f823a0"
+        type="text/javascript"></script>
 </head>
 <body>
 <app-root></app-root>
